@@ -41,6 +41,7 @@ gnupload
 hard-locale
 ignore-value
 intprops
+inttypes
 isatty
 isblank
 isdir
@@ -85,7 +86,7 @@ wcscoll
 wctob
 wctype-h
 xalloc
-xstrtoumax
+xstrtoimax
 '
 gnulib_name=libgreputils
 
